# FEMjsonWinit

./: .gitignore  Cargo.toml  TODO  test.json  test2.json
src/: lib.rs  main.rs  shader.wgsl  state.rs  transform.rs  vertex_data.rs
src/state/: camera.rs  init.rs  td_comp.rs  vertex_data.rs
