[package]
name = "femjsonwinit"
version = "0.0.2"
edition = "2021"


[dependencies]
winit = "0.28"
wgpu = "0.18"
cgmath = "0.18"
# imgui = "0.11.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.107"
bytemuck = {version = "1.14.0" , features = ["derive"]}
# instant = "0.1.12" use this if wasm support is important
